--- a/src/content/docs/ja/guides/troubleshooting.mdx
+++ b/src/content/docs/ja/guides/troubleshooting.mdx
@@ -131,9 +131,9 @@ nodeLinker: "node-modules"
 
 `console.log()`は、Astroのコードをデバッグするためのシンプルでありながら人気のある方法です。`console.log`ステートメントをどこに書くかによって、デバッグ出力がどこに出力されるかが決まります。
 
-#### Front-matter
+#### Frontmatter
 
-AstroのFront-matterの`console.log()`は、常にAstro CLIを実行している**ターミナル**に出力されます。これは、Astroがサーバー上で動作していて、ブラウザ上では動作しないためです。
+AstroのFrontmatterの`console.log()`は、常にAstro CLIを実行している**ターミナル**に出力されます。これは、Astroがサーバー上で動作していて、ブラウザ上では動作しないためです。
 
 ```astro {5}
 ---
