--- a/src/content/docs/ja/install/manual.mdx
+++ b/src/content/docs/ja/install/manual.mdx
@@ -67,7 +67,7 @@ npm install astro
 ```astro
 ---
 // Astroへようこそ！この3つのダッシュで囲まれた部分のコードが、
-// 「コンポーネントのFront Matter」です。ブラウザで実行されることはありません。
+// 「コンポーネントのfrontmatter」です。ブラウザで実行されることはありません。
 console.log('これはブラウザではなく、ターミナルで実行されます！');
 ---
 <!-- 以下は「コンポーネントテンプレート」です。これは単なるHTMLですが
