i18n(pt-BR): Small translation updates

--- a/src/content/docs/pt-br/core-concepts/endpoints.mdx
+++ b/src/content/docs/pt-br/core-concepts/endpoints.mdx
@@ -218,67 +218,4 @@ export async function get({ params, redirect }) {
 }
 ```
 
-### Exemplo: Verificando um desafio captcha
-Endpoints do servidor podem ser usados como uma API REST para executar funções de autenticação, acesso ao banco de dados e verificação sem expor dados sensíveis ao cliente.
-
-No exemplo abaixo, uma rota de API é usada para verificar um desafio Google reCAPTCHA v3 sem expor os segredos dele aos usuários.
-
-No servidor nós definimos uma função correspondente ao método POST que aceita os dados do desafio e então verifica seu resultado com a API do reCAPTCHA. Aqui nós podemos definir valores secretos ou ler variáveis de ambiente de maneira segura.
-
-```js title="src/pages/recaptcha.js"
-export async function post({ request }) {
-  const data = await request.json();
-
-  const recaptchaURL = 'https://www.google.com/recaptcha/api/siteverify';
-  const requestBody = {
-    secret: "SUA_CHAVE_SECRETA",   // Isso pode ser uma variável de ambiente
-    response: data.recaptcha       // O token recebido pela requisição
-  };
-
-  const response = await fetch(recaptchaURL, {
-    method: "POST",
-    body: JSON.stringify(requestBody)
-  });
-
-  const responseData = await response.json();
-
-  return new Response(JSON.stringify(responseData), { status: 200 });
-}
-```
-
-Então podemos acessar o endpoint utilizando `fetch` a partir de uma página do seu site:
-
-```astro title="src/pages/index.astro"
-<html>
-  <head>
-    <script src="https://www.google.com/recaptcha/api.js"></script>
-  </head>
-
-  <body>
-    <button class="g-recaptcha" 
-      data-sitekey="PUBLIC_SITE_KEY" 
-      data-callback="onSubmit" 
-      data-action="submit"
-     >
-       Clique aqui para verificar o desafio reCAPTCHA!
-     </button>
-
-    <script is:inline>
-      function onSubmit(token) {
-        fetch("/recaptcha", {
-          method: "POST",
-          body: JSON.stringify({ recaptcha: token })
-        })
-        .then((response) => response.json())
-        .then((gResponse) => {
-          if (gResponse.success) {
-            // Checagem bem-sucedida, captcha válido
-          } else {
-            // Checagem malsucedida
-          }
-        })
-      }
-    </script>
-  </body>
-</html>
-```
+**Receita relacionada:** [Use endpoints do servidor para verificar um CAPTCHA](/pt-br/recipes/captcha/)
