--- a/src/content/docs/pt-br/guides/client-side-scripts.mdx
+++ b/src/content/docs/pt-br/guides/client-side-scripts.mdx
@@ -8,6 +8,27 @@ i18nReady: true
 
 Você pode adicionar interatividade em seus componentes Astro sem [utilizar um framework de UI](/pt-br/core-concepts/framework-components/) como React, Svelte, Vue, etc. usando tags `<script>` padrões do HTML. Isso te permite enviar JavaScript a ser executado no navegador e adicionar funcionalidade aos seus componentes Astro.
 
+## Scripts no lado do Cliente
+
+Scripts podem ser utilizados para adicionar event listeners, enviar dados de analítica, iniciar animações e tudo mais que o JavaScript pode fazer na web.
+
+```astro
+// src/components/BotaoConfete.astro
+<button data-botao-confete>Celebre!</button>
+<script>
+  // Importa módulos do npm.
+  import confetti from 'canvas-confetti';
+  // Encontra o DOM do componente na página.
+  const botoes = document.querySelectorAll('[data-botao-confete]');
+  // Adiciona event listeners para lançar confete quando um botão é clicado.
+  botoes.forEach((botao) => {
+    botao.addEventListener('click', () => confetti());
+  });
+</script>
+```
+
+Por padrão, Astro processa e faz o bundle de tags `<script>`, adicionando suporte para a importação de módulos do npm, uso de TypeScript e mais.
+
 ## Utilizando `<script>` no Astro
 
 Em arquivos `.astro`, você pode adicionar JavaScript no lado do cliente adicionando uma (ou mais) tags `<script>`.
