--- a/src/content/docs/pt-br/core-concepts/routing.mdx
+++ b/src/content/docs/pt-br/core-concepts/routing.mdx
@@ -6,11 +6,20 @@ i18nReady: true
 import FileTree from '~/components/FileTree.astro'
 
 
-Astro utiliza **roteamento baseado em arquivos** para gerar as URLs da sua build com base no layout dos arquivos no diretório `src/pages` do seu projeto. Quando um arquivo é adicionado ao diretório `src/pages` do seu projeto, ele é automaticamente disponibilizado como uma rota baseada no seu nome de arquivo.
+Astro utiliza **roteamento baseado em arquivos** para gerar as URLs da sua build com base na disposição dos arquivos do diretório `src/pages/` de seu projeto.
+
+
+## Navegando entre páginas
+
+Astro usa [elementos `<a>`](https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/a) padrões do HTML para navegar entre rotas. Não há um componente `<Link>` específico do framework sendo providenciado.
+
+```astro title="src/pages/index.astro"
+<p>Leia mais <a href="/sobre/">sobre</a> Astro!</p>
+```
 
 ## Rotas estáticas
 
-Componentes Astro (`.astro`) e arquivos Markdown (`.md`) no diretório `src/pages` **automaticamente se tornam páginas no seu website**. A rota de cada página corresponde ao seu caminho e nome no diretório `src/pages`.
+[Componentes de página](/pt-br/core-concepts/astro-pages/) `.astro` assim como arquivos Markdown e MDX (`.md`, `.mdx`) dentro do diretório `src/pages/` **automaticamente se tornam páginas no seu website**. A rota de cada página corresponde ao seu caminho e nome de arquivo no diretório `src/pages/`.
 
 ```diff 
 # Exemplo: Rotas estáticas
@@ -22,20 +31,12 @@ src/pages/postagens/1.md         -> meusite.com/postagens/1
 ```
 
 :::tip
-Não existe uma "configuração de roteamento" separada para se manter em um projeto Astro! Quando você adiciona um arquivo no diretório `/src/pages/`, uma nova rota é criada automaticamente para você. Em builds estáticas, você pode customizar o formato de saída do arquivo utilizando a opção [`build.format`](/pt-br/reference/configuration-reference/#buildformat) da configuração. 
+Não existe uma "configuração de roteamento" separada para se manter em um projeto Astro! Quando você adiciona um arquivo no diretório `src/pages/`, uma nova rota é criada automaticamente para você. Em builds estáticas, você pode customizar o formato de saída do arquivo utilizando a opção [`build.format`](/pt-br/reference/configuration-reference/#buildformat) da configuração. 
 :::
-
-## Navegando entre páginas
-
-Astro usa [elementos `<a>`](https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/a) padrões do HTML para navegar entre rotas. Não há um componente `<Link>` específico do framework sendo providenciado.
-
-```astro title="src/pages/index.astro"
-<p>Leia mais <a href="/sobre/">sobre</a> Astro!</p>
-```
 
 ## Rotas dinâmicas
 
-Um arquivo de página Astro pode especificar parâmetros de rota dinâmicos em seu nome de arquivo para gerar páginas correspondentes. Por exemplo, você pode criar um arquivo `autores/[autor].astro` que gera uma página de biografia para cada autor no seu blog. `autor` se torna um _parâmetro_ que você pode acessar de dentro da página.
+Um arquivo de página Astro pode especificar parâmetros de rota dinâmicos em seu nome de arquivo para gerar múltiplas páginas correspondentes. Por exemplo, `src/pages/autores/[autor].astro` gera uma página de biografia para cada autor no seu blog. `autor` se torna um _parâmetro_ que você pode acessar de dentro da página.
 
 No modo estático padrão do Astro, essas páginas são geradas em tempo de build, e logo, você precisa predeterminar a lista de `autor`es que ganham um arquivo correspondente. No modo SSR, uma página será gerada na requisição para qualquer rota que corresponde.
 
@@ -79,7 +80,7 @@ const { lingua, versao } = Astro.params;
 
 Isso irá gerar `/en-v1/info` e `/fr-v2/info`.
 
-Parâmetros podem ser incluidos em partes separadas do caminho, então poderíamos utilizar `src/pages/[lingua]/[versao]/info.astro` com o mesmo `getStaticPaths` para gerar `/en/v1/info` e `/fr/v2/info`.
+Parâmetros podem ser incluidos em partes separadas do caminho. Por exemplo, o arquivo `src/pages/[lingua]/[versao]/info.astro` com o mesmo `getStaticPaths()` acima irá gerar as rotas `/en/v1/info` e `/fr/v2/info`.
 
 📚 Leia mais sobre [`getStaticPaths()`](/pt-br/reference/api-reference/#getstaticpaths).
 
@@ -103,7 +104,7 @@ const { caminho } = Astro.params;
 
 Isso irá gerar `/sequencias/um/dois/três`, `/sequencias/quatro` e `/sequencias`. (Definir o parâmetro rest como `undefined` o permite corresponder a página de nível superior.)
 
-Parâmetros rest podem ser utilizados com **outros parâmetros nomeados**. Por exemplo, poderíamos representar o visualizador de arquivos do GitHub com uma rota dinâmica assim:
+Parâmetros rest podem ser utilizados com **outros parâmetros nomeados**. Por exemplo, o visualizador de arquivos do GitHub pode ser representado com a seguinte rota dinâmica:
 
 ```
 /[org]/[repo]/tree/[branch]/[...arquivo]
@@ -122,7 +123,7 @@ Nesse exemplo, uma requisição a `/withastro/astro/tree/main/docs/public/favico
 
 #### Exemplo: Páginas dinâmicas em múltiplos níveis
 
-Aqui, nós utilizamos um parâmetro (`[...slug]`) e a funcionalidade [`props`](/pt-br/reference/api-reference/#passagem-de-dados-com-props) de `getStaticPaths()` para gerar páginas para slugs de diferentes profundidades.
+No exemplo a seguir, um parâmetro rest (`[...slug]`) e a funcionalidade [`props`](/pt-br/reference/api-reference/#passagem-de-dados-com-props) de `getStaticPaths()` geram páginas para slugs de diferentes profundidades.
 
 ```astro title="src/pages/[...slug].astro"
 ---
@@ -178,7 +179,7 @@ A página será servida para qualquer valor de `recurso` e `id`: `recursos/usuar
 
 #### Modificando o exemplo `[...slug]` para SSR
 
-Já que páginas SSR não podem utilizar `getStaticPaths`, elas não podem receber props. Aqui, nós modificamos nosso [exemplo anterior](#exemplo-páginas-dinâmicas-em-múltiplos-níveis) para funcionar com SSR ao olhar para o valor do parâmetro `slug` em um objeto. Se a rota está na raiz ("/"), o parâmetro slug será `undefined`. Se o valor não existe no objeto, nós redirecionamos para uma página de 404.
+Já que páginas SSR não podem utilizar `getStaticPaths()`, elas não podem receber props. O [exemplo anterior](#exemplo-páginas-dinâmicas-em-múltiplos-níveis) pode ser adaptado para funcionar com SSR ao olhar para o valor do parâmetro `slug` em um objeto. Se a rota está na raiz ("/"), o parâmetro slug será `undefined`. Se o valor não existe no objeto, nós redirecionamos para uma página de 404.
 
 ```astro title="src/pages/[...slug].astro"
 ---
@@ -373,9 +374,9 @@ const params = Astro.params;
 
 ## Excluindo páginas
 
-Você pode excluir páginas ou até mesmo diretórios inteiros da build ao prefixar seus nomes com um subtraço (`_`).
+Você pode excluir páginas ou até mesmo diretórios inteiros da build ao prefixar seus nomes com um subtraço (`_`). Arquivos com o prefixo `_` não serão reconhecidas pelo roteador e não serão adicionadas ao diretório `dist/`.
 
-Isso permite que você crie páginas privadas e também co-localizar testes, utilitários e componentes com suas páginas relacionadas, as previnindo de serem construidas como arquivos `.html` e colocadas no diretório `dist/`.
+Você pode utilizar isto para temporariamente desabilitar páginas, e para também adicionar testes, utilitários e componentes na mesma pasta que suas páginas relacionadas.
 
 Neste exemplo, apenas `src/pages/index.astro` e `src/pages/postagens/postagem1.md` serão construídas como rotas de página e arquivos HTML.
 
