--- a/src/content/docs/zh-cn/guides/environment-variables.mdx
+++ b/src/content/docs/zh-cn/guides/environment-variables.mdx
@@ -18,7 +18,7 @@ PUBLIC_ANYBODY=there
 在这个示例中，`PUBLIC_ANYBODY`（通过 `import.meta.env.PUBLIC_ANYBODY` 访问） ，而 `SECRET_PASSWORD`（通过 `import.meta.env.SECRET_PASSWORD` 访问）将只对服务端可见。
 
 :::caution
-`.env` 文件不会加载到[配置文件](/en/guides/configuring-astro/#environment-variables)中。
+`.env` 文件不会加载到[配置文件](/zh-cn/guides/configuring-astro/#环境变量)中。
 :::
 
 ## 默认环境变量
