--- a/src/content/docs/zh-cn/guides/environment-variables.mdx
+++ b/src/content/docs/zh-cn/guides/environment-variables.mdx
@@ -4,7 +4,7 @@ description: 学习如何在 Astro 项目中使用环境变量。
 ---
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-Astro 使用 Vite 的环境变量，你可以随意[使用它们的任一方式](https://vitejs.dev/guide/env-and-mode.html)获取并设置环境变量。
+Astro 使用 Vite 的环境变量，你可以随意[使用它们的任一方式](https://cn.vitejs.dev/guide/env-and-mode.html)获取并设置环境变量。
 
 注意**所有**环境变量都对服务端代码可见，出于安全考虑只有以 `PUBLIC_` 开始的环境变量才会对客户端代码可见。
 
@@ -49,7 +49,7 @@ DB_PASSWORD="foobar"
 # 这在什么地方都有效！
 PUBLIC_POKEAPI="https://pokeapi.co/api/v2"
 ```
-更多关于`.env` 文件的信息，[请参阅 Vite 文档](https://vitejs.dev/guide/env-and-mode.html#env-files)。
+更多关于`.env` 文件的信息，[请参阅 Vite 文档](https://cn.vitejs.dev/guide/env-and-mode.html#env-files)。
 
 ### 使用CLI
 你也还可以在运行项目时添加环境变量：
