--- a/src/content/docs/en/recipes.mdx
+++ b/src/content/docs/en/recipes.mdx
@@ -28,3 +28,4 @@ Add your own here! See our [recipes contributing guide](https://github.com/witha
 - [Enhance your Astro builds: modify HTML files post-build](https://straffesites.com/en/blog/optimize-astro-html-post-build)
 - [Add dark mode to Astro with Tailwind CSS](https://www.kevinzunigacuellar.com/blog/dark-mode-in-astro/)
 - [Generate localized sitemaps for your Astro and Storyblok project](https://straffesites.com/en/blog/localized-sitemap-astro-storyblok)
+- [Integrate Prettier with Astro and Tailwind CSS](https://straffesites.com/en/blog/integrate-prettier-astro-tailwindcss)
