--- a/src/content/docs/en/guides/deploy/kinsta.mdx
+++ b/src/content/docs/en/guides/deploy/kinsta.mdx
@@ -46,7 +46,7 @@ To host your project on **Kinsta Application Hosting**, you need to:
 - Include a `name` field in your `package.json`. (This can be anything, and will not affect your deployment.)
 - Include a `build` script in your `package.json`. (Your Astro project should already include this.)
 - Install the [`@astrojs/node`](https://www.npmjs.com/package/@astrojs/node) package and set the `start` script to `node ./dist/server/entry.mjs`.
-- Set the `astro.config.mjs` to use `@astrojs/node` and to use `host: true`
+- Set the `astro.config.mjs` to use `@astrojs/node` and to use `host: true`.
 
 Here are the necessary lines in your `package.json` file:
 ```json title="package.json" {2,5,6} ins={12} "node ./dist/server/entry.mjs"
