--- a/src/content/docs/en/guides/cms/frontmatter-cms.mdx
+++ b/src/content/docs/en/guides/cms/frontmatter-cms.mdx
@@ -47,8 +47,8 @@ The name gets used during the creation process of new content. For example, havi
 :::tip
 Once Front Matter CMS is initialized, you can open the dashboard as follows:
 
-- Using the keyboard binding: <kbd>alt</kbd> + <kbd>d</kbd> (Windows & Linux) or <kbd>options</kbd> + <kbd>d</kbd> (macOS);
-- Open the command palette and search for `Front Matter: Open dashboard`;
+- Using the keyboard binding: <kbd>alt</kbd> + <kbd>d</kbd> (Windows & Linux) or <kbd>options</kbd> + <kbd>d</kbd> (macOS)
+- Open the command palette and search for `Front Matter: Open dashboard`
 - Click on the **Front Matter** icon on the panel's title bar or files.
 :::
 
