--- a/src/content/docs/en/guides/cms/frontmatter-cms.mdx
+++ b/src/content/docs/en/guides/cms/frontmatter-cms.mdx
@@ -131,8 +131,8 @@ From the **Front Matter CMS** panel, click on the **Start server** button. This 
 Open the **Front Matter CMS Dashboard**; you can do this as follows: 
 
 - Open the Front Matter CMS' content dashboard
-- Click on the **Create content** button;
-- Front Matter will ask you for the title of the article. Fill it in and press enter;
+- Click on the **Create content** button
+- Front Matter will ask you for the title of the article. Fill it in and press enter
 - Your new article will be created and opened in the editor. You can start writing your article.
 
 ### Using Markdoc with Front Matter CMS
