--- a/src/content/docs/en/guides/cms/frontmatter-cms.mdx
+++ b/src/content/docs/en/guides/cms/frontmatter-cms.mdx
@@ -74,7 +74,7 @@ The fields correspond to the front matter of your page content.
 
 You can configure the content-types in the `frontmatter.json` file. 
 
-- Open the `frontmatter.json` file;
+- Open the `frontmatter.json` file
 - Replace the `frontMatter.taxonomy.contentTypes` array with the following content-types configuration:
 
 ```json title="frontmatter.json"
