i18n(zh-cn): update astro-syntax.mdx

--- a/src/content/docs/zh-cn/core-concepts/astro-syntax.mdx
+++ b/src/content/docs/zh-cn/core-concepts/astro-syntax.mdx
@@ -1,6 +1,6 @@
 ---
-title: Astro 模版语法
-description: 关于 .astro 模版语法的介绍。
+title: Astro 语法
+description: 关于 .astro 组件语法的介绍。
 ---
 
 **如果你懂 HTML，那么就已经有足够的知识来编写你的第一个 Astro 组件了**。
