--- a/src/content/docs/ko/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/ko/guides/upgrade-to/v2.mdx
@@ -70,7 +70,7 @@ Astro v2.0은 Node.js의 최신 기능을 사용할 수 있게 Node.js 14에 대
     만약 로컬 개발 환경을 업그레이드해야 하는 경우, [Node.js를 설치하세요](https://nodejs.org/en/download/).
 
 
-2. [배포 환경](/ko/guides/deploy/)의 문서를 확인하여 Node.js 16을 지원하는지 확인하세요.
+2. [Deployments environment](/ko/guides/deploy/)의 문서를 확인하여 Node.js 16을 지원하는지 확인하세요.
 
     대시보드 구성 설정 또는 `.nvmrc` 파일에서 Astro 프로젝트의 Node.js 버젼을 `16.12.0`으로 지정할 수 있습니다.
 
@@ -91,7 +91,7 @@ Astro v2.0은 더 이상 `site`의 값을 수정하지 않습니다. `Astro.site
 
 #### 무엇을 해야 하나요?
 
- astro.config.mjs`에서 `site`에 설정된 URL에 후행 슬래시를 추가합니다.
+ `astro.config.mjs`에서 `site`에 설정된 URL에 후행 슬래시를 추가합니다.
 
 ```js del={5} ins={6}
 // astro.config.mjs
@@ -107,7 +107,7 @@ export default defineConfig({
 
 v1.x에서는 에셋이 `assets/`, `chunks/` 및 빌드 출력의 루트와 같은 다양한 위치에 빌드되었습니다.
 
-Astro v2.0은 모든 빌드 출력 에셋을 새로운 `_astro/` 폴더로 통합되었습니다..
+Astro v2.0은 모든 빌드 출력 에셋을 새로운 `_astro/` 폴더로 통합되었습니다.
 
 <FileTree>
 - dist/
@@ -159,7 +159,7 @@ Astro v2.0에서는 `markdown.extendDefaultPlugins: false`를 별도의 boolean 
 설정 파일에서 `extendPlugins: 'markdown'`을 삭제하세요. 이제부터는 기본값으로 설정됩니다.
 
 - `markdown.gfm: false` GitHub-Flavored Markdown를 비활성화하는 옵션
-- `markdown.smartypants: false` SmartyPants를 비활성화하는 옵션.
+- `markdown.smartypants: false` SmartyPants를 비활성화하는 옵션
 
 ```js del={6} ins={7-8}
 // astro.config.mjs
