i18n(zh-cn): more reasonable

--- a/src/content/docs/zh-cn/core-concepts/astro-syntax.mdx
+++ b/src/content/docs/zh-cn/core-concepts/astro-syntax.mdx
@@ -116,7 +116,7 @@ const Component = MyComponent;
 
 当你使用动态标签时:
 
-- **变量名称必须大写。** 比如 `Element`, 不是 `element`。 否则，Astro会尝试将你的变量名渲染成一个字面量的HTML标签。
+- **变量名称必须大写。** 比如 `Element`, 而不是 `element`。 否则，Astro会尝试将你的变量名渲染成一个字面量的HTML标签。
 
 - **不支持 Hydration 指令。** 当使用 [`client:*` hydration 指令](/zh-cn/core-concepts/framework-components/#激活组件)，Astro 需要知道在生产中要打包哪些组件，而动态标签模式会妨碍这个功能的实现。
 
