i18n(ko): fix translations and code blocks

--- a/src/content/docs/ko/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/ko/guides/upgrade-to/v2.mdx
@@ -47,7 +47,7 @@ import FileTree from '~/components/FileTree.astro'
 
 ## Astro v2.0 중요한 변경 사항
 
-Astro v2.0은 일부 중요한 변경 사항에는 지원 종료된 일부 기능이 제거되었습니다. v2.0으로 업그레이드한 후 프로젝트가 예상대로 작동하지 않으면, 이 가이드를 확인하여 모든 중요한 변경 사항을 확인하고 코드베이스를 업데이트하는 방법에 대한 확인해보세요.
+Astro v2.0은 일부 중요한 변경 사항에는 지원 종료된 일부 기능이 제거되었습니다. v2.0으로 업그레이드한 후 프로젝트가 예상대로 작동하지 않으면, 이 가이드를 확인하여 모든 중요한 변경 사항을 확인하고 코드베이스를 업데이트하는 방법에 대해 확인해보세요.
 
 자세한 내용은 [패치노트를](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md) 통해 확인하실수 있습니다.
 
@@ -148,7 +148,7 @@ export default defineConfig({
 });
 ```
 
-#### 신기능: `gfm` 와 `smartypants`
+#### 신기능: `gfm`과 `smartypants`
 
 v1.x에서는 `markdown.extendDefaultPlugins: false`를 설정하여 Astro의 기본 마크다운 플러그인(GitHub-Flavored Markdown 및 SmartyPants)을 모두 비활성화하도록 선택할 수 있었습니다.
 
@@ -354,7 +354,7 @@ Astro v2.0에서는 이 옵션이 완전히 제거되었습니다. 코드에서 
 
 #### 무엇을 해야 하나요?
 
-마크다운 파일을 가져오기 위해 [`Astro.glob()`](/ko/guides/imports/#astroglob) 을 사용하거나 [Content Collections](/ko/guides/content-collections/) 기능으로 바꾸세요.
+마크다운 파일을 가져오기 위해 [`Astro.glob()`](/ko/guides/imports/#astroglob)을 사용하거나 [Content Collections](/ko/guides/content-collections/) 기능으로 바꾸세요.
 
 ```astro
 // src/pages/index.astro
@@ -389,7 +389,7 @@ Astro v2.0는 Vite 3에서 2022년 10월에 출시된 [Vite 4](https://vitejs.de
 
 이번에는 코드에 변경할께 없습니다! Astro 내부에서 대부분의 업그레이드를 처리했지만, 일부 세부적인 Vite 동작은 버전 간에 변경점이 있을수있습니다.
 
-문제가 생기면 [공식 Vite 마이그레이션 가이드](https://vitejs.dev/guide/migration.html)을 참조하세요
+문제가 생기면 [공식 Vite 마이그레이션 가이드](https://vitejs.dev/guide/migration.html)를 참조하세요
 
 ## Astro v2.0 Experimental 지원 종료
 
