--- a/src/content/docs/ko/install/manual.mdx
+++ b/src/content/docs/ko/install/manual.mdx
@@ -8,7 +8,7 @@ import FileTree from '~/components/FileTree.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
-이 가이드는 [CLI 도구](/ko/install/auto/)를 선호하지 않는 분들을 위한 새 Astro 프로젝트를 수동으로 설치하고 구성하는 단계를 안내합니다. if you prefer not to use [the automatic CLI tool](/en/install/auto/).
+이 가이드는 [CLI 도구](/ko/install/auto/)를 선호하지 않는 분들을 위한 새 Astro 프로젝트를 수동으로 설치하고 구성하는 단계를 안내합니다.
 
 #### 더 빠른 방법으로 시작하는 걸 선호하시나요?
 
@@ -22,18 +22,18 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 #### 설치하기
 
-Astro 프로젝트를 자동으로 생성하는 'create astro' CLI 도구를 사용하지 않으려면 아래 가이드에 따라 프로젝트를 직접 설정할 수 있습니다.
+Astro 프로젝트를 자동으로 생성하는 `create astro` CLI 도구를 사용하지 않으려면 아래 가이드에 따라 프로젝트를 직접 설정할 수 있습니다.
 
 ## 1. 폴더 만들기
 
-프로젝트 이름으로 빈 디렉터리를 생성한 다음 해당 디렉토리로 이동합니다.
+프로젝트 이름으로 빈 디렉터리를 생성한 다음 해당 디렉터리로 이동합니다.
 
 ```bash
 mkdir my-astro-project
 cd my-astro-project
 ```
 
-새 디렉토리에 들어가면 프로젝트 `package.json` 파일을 생성합니다. 이렇게 하면 Astro를 포함한 프로젝트 종속성을 관리할 수 있습니다. 만약 이 파일 형식에 익숙하지 않은 경우 다음 명령을 실행하여 파일을 생성하세요.
+새 디렉터리에 들어가면 프로젝트 `package.json` 파일을 생성합니다. 이렇게 하면 Astro를 포함한 프로젝트 종속성을 관리할 수 있습니다. 만약 이 파일 형식에 익숙하지 않은 경우 다음 명령을 실행하여 파일을 생성하세요.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -121,7 +121,7 @@ console.log('This runs in your terminal, not the browser!');
 
 또한 정적 에셋을 저장할 `public/` 디렉터리를 생성하는 것이 좋습니다. Astro는 항상 최종 빌드에 이러한 에셋을 포함하므로 컴포넌트 내부에서 안전하게 참조할 수 있습니다.
 
-텍스트 편집기에서 `public/robots.txt` 디렉터리에 새 파일을 만듭니다. robots.txt`는 대부분의 사이트에서 Google과 같은 검색 봇에게 사이트 처리 방법을 알려주기 위해 포함하는 간단한 파일입니다.
+텍스트 편집기에서 `public/robots.txt` 디렉터리에 새 파일을 만듭니다. `robots.txt`는 대부분의 사이트에서 Google과 같은 검색 봇에게 사이트 처리 방법을 알려주기 위해 포함하는 간단한 파일입니다.
 
 다음 코드를 대시를 포함해 복사하여 새 파일에 붙여넣으세요.
 
@@ -145,9 +145,9 @@ import { defineConfig } from 'astro/config';
 export default defineConfig({});
 ```
 
-프로젝트에 React, Svelte 등과 같은 [UI 프레임워크 컴포넌트](/en/core-concepts/framework-components/)들을 추가하거나 Tailwind 또는 Partytown과 같은 다른 도구를 사용하려는 경우, [여기에서 수동으로 인터그레이션을 가져와 구성할 수 있는 방법](/en/guides/integrations-guide/) 을 알 수 있습니다.
+프로젝트에 React, Svelte 등과 같은 [UI 프레임워크 컴포넌트](/ko/core-concepts/framework-components/)들을 추가하거나 Tailwind 또는 Partytown과 같은 다른 도구를 사용하려는 경우, [여기에서 수동으로 인터그레이션을 가져와 구성할 수 있는 방법](/ko/guides/integrations-guide/) 을 알 수 있습니다.
 
-📚 자세한 내용은 Astro의 [API 구성 참조](/en/reference/configuration-reference/)를 참조하세요.
+📚 자세한 내용은 Astro의 [API 구성 참조](/ko/reference/configuration-reference/)를 참조하세요.
 
 ## 6. 타입스크립트 지원 추가하기
 
@@ -169,7 +169,7 @@ TypeScript 코드를 작성하려는 경우 Astro의 `strict` 또는 `strictest`
 /// <reference types="astro/client" />
 ```
 
-📚 자세한 내용은 Astro의 [타입스크립트 설정 가이드](/en/guides/typescript/#setup)를 참조하세요.
+📚 자세한 내용은 Astro의 [타입스크립트 설정 가이드](/ko/guides/typescript/#setup)를 참조하세요.
 
 ## 7. 다음 단계
 
@@ -191,4 +191,4 @@ TypeScript 코드를 작성하려는 경우 Astro의 `strict` 또는 `strictest`
 
 축하합니다, 이제 Astro를 사용할 준비가 되었습니다!
 
-이 가이드를 완전히 따랐다면 [2단계: Astro 시작하기](/en/install/auto/#2-start-astro-)로 바로 이동하여 Astro를 처음 실행하는 방법을 계속 학습할 수 있습니다.
+이 가이드를 완전히 따랐다면 [2단계: Astro 시작하기](/ko/install/auto/#2-start-astro-)로 바로 이동하여 Astro를 처음 실행하는 방법을 계속 학습할 수 있습니다.
