--- a/src/content/docs/es/guides/cms/wordpress.mdx
+++ b/src/content/docs/es/guides/cms/wordpress.mdx
@@ -19,7 +19,7 @@ WordPress viene con una [API REST de WordPress](https://developer.wordpress.org/
 Para empezar, necesitarás lo siguiente:
 
 1. **Un proyecto Astro** - Si no tienes un proyecto Astro aún, nuestra [guía de instalación](/es/install/auto/) te ayudará a empezar en cuestión de minutos.
-2. **Un sitio WordPress** - La API REST de tu sitio es `[YOUR_SITE]/wp-json/wp/v2/` y está disponible por defecto con cualquier sitio WordPress. También es posible [configurar WordPress en un entorno local](https://wordpress.org/support/article/installing-wordpress-on-your-own-computer/).
+2. **Un sitio WordPress** - La URL de la API REST es `[YOUR_SITE]/wp-json/wp/v2/` y está disponible por defecto con cualquier sitio WordPress. También es posible [configurar WordPress en un entorno local](https://wordpress.org/support/article/installing-wordpress-on-your-own-computer/).
 
 ### Configurando Credenciales
 
@@ -53,20 +53,20 @@ const posts = await res.json()
 
 La API REST de WordPress incluye [parámetros globales](https://developer.wordpress.org/rest-api/using-the-rest-api/global-parameters/) como `_fields` y `embed`.
 
-Un gran cantidad de datos está disponible a través de esta API, por lo que puede que desees solo obtener ciertos campos. Puedes restringir tu respuesta agregando el parámetro [`_fields`](https://developer.wordpress.org/rest-api/using-the-rest-api/global-parameters/#_fields) a la URL de la API, por ejemplo: `[YOUR-SITE]/wp/v2/posts?_fields=author,id,excerpt,title,link`
+Una gran cantidad de datos están disponible a través de esta API, por lo que puede que desees solo obtener ciertos campos. Puedes restringir tu respuesta agregando el parámetro [`_fields`](https://developer.wordpress.org/rest-api/using-the-rest-api/global-parameters/#_fields) a la URL de la API, por ejemplo: `[YOUR-SITE]/wp/v2/posts?_fields=author,id,excerpt,title,link`
 
-La API puede regresar contenido relacionado a tu post, como un link al post padre, o a los comentarios del post. Puedes agregar el parámetro [`_embed`](https://developer.wordpress.org/rest-api/using-the-rest-api/global-parameters/#_embed) a la URL de la API (por ejemplo: `[YOUR-SITE]/wp/v2/posts?_embed`) para indicarle al servidor que la respuesta debe incluir estos recursos embebidos.
+La API puede regresar contenido relacionado con tu artículo, como un link al artículo padre, o a los comentarios del artículo. Puedes agregar el parámetro [`_embed`](https://developer.wordpress.org/rest-api/using-the-rest-api/global-parameters/#_embed) a la URL de la API (por ejemplo: `[YOUR-SITE]/wp/v2/posts?_embed`) para indicarle al servidor que la respuesta debe incluir estos recursos embebidos.
 
 ## Creando un blog con WordPress y Astro
 
-Este ejemplo obtiene datos de la API pública de WordPress de [https://norian.studio/dinosaurs/](https://norian.studio/dinosaurs/). Este sitio de WordPress almacena información sobre dinosaurios individuales bajo la ruta `dinos`, al igual que un blog almacenaría entradas individuales de blog bajo la ruta `posts`.
+En este ejemplo obtendremos los datos de la API pública de WordPress de [https://norian.studio/dinosaurs/](https://norian.studio/dinosaurs/). Este sitio de WordPress almacena información sobre dinosaurios individuales bajo la ruta `dinos`, al igual que un blog almacenaría entradas individuales de blog bajo la ruta `posts`.
 
-Este ejemplo muestra cómo reproducir esta estructura de sitio en Astro: una página de índice que lista dinosaurios con enlaces a páginas de dinosaurios generadas dinámicamente.
+Este ejemplo demuestra la estructura de sitio en Astro: una página índice que lista dinosaurios con enlaces a páginas de dinosaurios generadas dinámicamente.
 
 :::note
 Para usar [Tipos de Post Personalizados (CPT)](https://learn.wordpress.org/lesson-plan/custom-post-types/) en tu API de WordPress (no solo `post` y `page`), tendrás que [configurarlos en tu panel de WordPress](https://stackoverflow.com/questions/48536646/how-can-i-get-data-from-custom-post-type-using-wp-rest-api) o [agregar soporte REST API para tipos de contenido personalizados](https://developer.wordpress.org/rest-api/extending-the-rest-api/adding-rest-api-support-for-custom-content-types/) en WordPress.
 
-Este ejemplo obtiene datos de un sitio WordPress cuyos tipos de contenido ya han sido configurados y expuestos a la API REST.
+En este ejemplo los datos se obtienen de un sitio WordPress cuyos tipos de contenido ya han sido configurados y expuestos a la API REST.
 :::
 
 ### Mostrando una lista de entradas de WordPress
@@ -159,7 +159,7 @@ let [post] = await res.json();
 ---
 ```
 
-La propiedad `_embedded['wp:featuredmedia']['0'].source_url` se devuelve y se puede usar para mostrar la imagen destacada en cada página de dinosaurio.
+La propiedad `_embedded['wp:featuredmedia']['0'].source_url` devuelve una imagen destacada en cada página de dinosaurio.
 
 ```astro title="/src/pages/dinos/[slug].astro" {3}
 <Layout title={post.title.rendered}>
