--- a/src/content/docs/en/guides/cms/statamic.mdx
+++ b/src/content/docs/en/guides/cms/statamic.mdx
@@ -93,7 +93,7 @@ const entries = await res.json()
 
 ### Publishing your site
 
-To deploy your site visit our [deployment guide](/en/guides/deploy/) and follow the instructions for your preferred hosting provider.
+To deploy your Astro site visit our [deployment guides](/en/guides/deploy/) and follow the instructions for your preferred hosting provider.
 
 ## Community Resources 
 
