--- a/src/content/docs/en/guides/cms/statamic.mdx
+++ b/src/content/docs/en/guides/cms/statamic.mdx
@@ -21,7 +21,7 @@ To get started, you will need to have the following:
 2. **An Astro project** - If you still need an Astro project, our [Installation guide](/en/install/auto/) will get you up and running quickly.
 3. **A Statamic site** - [Enable REST API](https://statamic.dev/rest-api#enable-the-api) or [GraphQL API](https://statamic.dev/graphql#enable-graphql) by adding `STATAMIC_API_ENABLED=true` or `STATAMIC_GRAPHQL_ENABLED=true` in the `.env` file and enable required resources in the API configuration file.
 
-:::note
+:::caution
 All the examples assume that your website has a collection called `posts`, that has a blueprint called `post`, and this blueprint has a title field (fieldtype text) and content (fieldtype markdown).
 :::
 
