better caution note

--- a/src/content/docs/en/guides/cms/statamic.mdx
+++ b/src/content/docs/en/guides/cms/statamic.mdx
@@ -28,7 +28,9 @@ All the examples assume that your website has a collection called `posts`, that 
 
 ### Fetching Data
 :::caution
-If you are using Statamic and Astro on your local machine remember to use `127.0.0.1` instead of `localhost` when fetching the API.
+If you are using Statamic and Astro on your local machine remember to use `127.0.0.1` instead of `localhost` when fetching the API. 
+
+When requesting from the Astro server `localhost` doesn't resolve correctly like it does in the browser, and any fetch to either API will fail.
 :::
 
 #### REST API
