--- a/src/content/docs/ko/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/ko/guides/upgrade-to/v2.mdx
@@ -323,7 +323,7 @@ export default defineConfig({
 
 ```
 
-만약 v1.x에서 이 기능을 사용 중이라면 컴포넌트와 JSX 표현식을 마크다운 구문과 결합할 수 있는 [MDX 통합](/ko/guides/통합-가이드/mdx/)을 사용하는 것이 좋습니다.
+만약 v1.x에서 이 기능을 사용 중이라면 컴포넌트와 JSX 표현식을 마크다운 구문과 결합할 수 있는 [MDX 통합](/ko/guides/integrations-guide/mdx/)을 사용하는 것이 좋습니다.
 
 ### 삭제됨: `Astro.resolve()`
 
