--- a/src/content/docs/ko/install/manual.mdx
+++ b/src/content/docs/ko/install/manual.mdx
@@ -191,4 +191,4 @@ TypeScript 코드를 작성하려는 경우 Astro의 `strict` 또는 `strictest`
 
 축하합니다, 이제 Astro를 사용할 준비가 되었습니다!
 
-이 가이드를 완전히 따랐다면 [2단계: Astro 시작하기](/ko/install/auto/#2-start-astro-)로 바로 이동하여 Astro를 처음 실행하는 방법을 계속 학습할 수 있습니다.
+이 가이드를 완전히 따랐다면 [2단계: Astro 시작하기](/ko/install/auto/#2-astro-시작하기-)로 바로 이동하여 Astro를 처음 실행하는 방법을 계속 학습할 수 있습니다.
