--- a/src/content/docs/zh-cn/core-concepts/routing.mdx
+++ b/src/content/docs/zh-cn/core-concepts/routing.mdx
@@ -338,7 +338,7 @@ interface Page<T = any> {
 }
 ```
 
-## 嵌套分页
+### 嵌套分页
 
 分页的一个更高级的用例是**嵌套分页**。当分页与其他动态路由参数相结合时，你可以使用嵌套式分页和一些属性或标签来将分页进行分类。
 例如，如果你想通过一些标签来分组你的分页的 Markdown 帖子，你可以通过创建一个 `/src/pages/[tag]/[page].astro` 的页面来使用嵌套分页，该页面将匹配以下链接。
