--- a/src/content/docs/zh-cn/core-concepts/routing.mdx
+++ b/src/content/docs/zh-cn/core-concepts/routing.mdx
@@ -86,7 +86,7 @@ const { lang, version } = Astro.params;
 
 #### 剩余参数
 
-如果你的URL路由需要更加灵活，你可以在 `.astro` 文件名中使用一个剩余参数（`[...path]`），去匹配任何深度的文件路径。
+如果你的URL路由需要更加灵活，你可以在 `.astro` 文件名中使用一个 [剩余参数](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/rest_parameters)（`[...path]`），去匹配任何深度的文件路径。
 
 ```astro title="src/pages/sequences/[...path].astro"
 ---
@@ -293,7 +293,7 @@ const { page } = Astro.props;
 - **page.url.next** - 下一个页面的链接
 - **page.url.prev** - 上一个页面的链接
 
-```astro
+```astro /(?<=const.*)(page)/ /page\\.[a-zA-Z]+(?:\\.(?:prev|next))?/
 ---
 // 示例：/src/pages/astronauts/[page].astro
 // 将与上一个示例相同的 { astronaut } 对象进行分页
