promises in template

--- a/src/content/docs/en/guides/server-side-rendering.mdx
+++ b/src/content/docs/en/guides/server-side-rendering.mdx
@@ -253,8 +253,9 @@ const factData = await factResponse.json();
     <title>A name and a fact</title>
   </head>
   <body>
-    <h1>A name and a fact</h1>
+    <h2>A name</h2>
     <p>{randomPerson.name.first}</p>
+    <h2>A fact</h2>
     <p>{factData.fact}</p>
   </body>
 </html>
@@ -289,12 +290,36 @@ import RandomFact from '../components/RandomFact.astro'
     <title>A name and a fact</title>
   </head>
   <body>
-    <h1>A name and a fact</h1>
+    <h2>A name</h2>
     <RandomName />
+    <h2>A fact</h2>
     <RandomFact />
   </body>
 </html>
 ```
 
-The page will now send each part of the page whenever it is ready. Astro will first send the `head`, `body`, and `h1` tags to the browser. It will then wait for `RandomName` to finish loading its Promises, and then send the resulting HTML over the network. Then it will do the same for `RandomFact`.
+The page will now send each part of the page whenever it is ready. Astro will first send the `head`, `body`, and `h1` tags to the browser. It will then wait for `RandomName` to finish loading its Promises, and then send the resulting HTML over the network. It will render the next heading, and then it will wait for `RandomFact` and send its resulting HTML over the browser.
 
+### Including Promises directly
+
+You can also include promises directly in the template. Instead of blocking the entire component, it will only block the markup that comes after it.
+
+```astro title="src/pages/index.astro"
+---
+const personPromise = fetch('https://randomuser.me/api/').then(resp => response.json()).then(arr => arr[0].name.first);
+const factPromise = fetch('https://catfact.ninja/fact').then(resp => response.json()).then(factData => factData.fact);
+---
+<html>
+  <head>
+    <title>A name and a fact</title>
+  </head>
+  <body>
+    <h2>A name</h2>
+    <p>{personPromise}</p>
+    <h2>A fact</h2>
+    <p>{factPromise}</p>
+  </body>
+</html>
+```
+
+In this example, `A name` will render while `personPromise` is loading. At that point, `A fact` will be appear, while `factPromise` is loading.
