--- a/src/content/docs/en/guides/server-side-rendering.mdx
+++ b/src/content/docs/en/guides/server-side-rendering.mdx
@@ -280,7 +280,7 @@ const factData = await factResponse.json();
 <p>{factData.fact}</p>
 ```
 
-```astro title="src/pages/index.astro" {1, 9}
+```astro title="src/pages/index.astro"
 ---
 import RandomName from '../components/RandomName.astro'
 import RandomFact from '../components/RandomFact.astro'
@@ -300,14 +300,18 @@ import RandomFact from '../components/RandomFact.astro'
 
 The page will now send each part of the page whenever it is ready. Astro will first send the `head`, `body`, and `h1` tags to the browser. It will then wait for `RandomName` to finish loading its Promises, and then send the resulting HTML over the network. It will render the next heading, and then it will wait for `RandomFact` and send its resulting HTML over the browser.
 
-### Including Promises directly
+#### Including Promises directly
 
 You can also include promises directly in the template. Instead of blocking the entire component, it will only block the markup that comes after it.
 
 ```astro title="src/pages/index.astro"
 ---
-const personPromise = fetch('https://randomuser.me/api/').then(resp => response.json()).then(arr => arr[0].name.first);
-const factPromise = fetch('https://catfact.ninja/fact').then(resp => response.json()).then(factData => factData.fact);
+const personPromise = fetch('https://randomuser.me/api/')
+  .then(resp => response.json())
+  .then(arr => arr[0].name.first);
+const factPromise = fetch('https://catfact.ninja/fact')
+  .then(resp => response.json())
+  .then(factData => factData.fact);
 ---
 <html>
   <head>
