--- a/src/content/docs/en/guides/cms/decap-cms.mdx
+++ b/src/content/docs/en/guides/cms/decap-cms.mdx
@@ -1,16 +1,16 @@
 ---
-title: Netlify CMS & Astro
-description: Add content to your Astro project using Netlify as a CMS
+title: Decap CMS & Astro
+description: Add content to your Astro project using Decap as a CMS
 type: cms
 stub: true
-service: Netlify CMS
+service: Decap CMS
 i18nReady: false
 ---
 
-[Netlify CMS](https://www.netlifycms.org/) is an open-source, Git-based content management system.
+[Decap CMS](https://www.decapcms.org/) (formerly Netlify CMS) is an open-source, Git-based content management system.
 ## Community Resources 
 
-- Use the [`astro-netlify-cms`](https://github.com/delucis/astro-netlify-cms) Astro integration to add Netlify CMS to your project.
+- Use the [`astro-decap-cms`](https://github.com/delucis/astro-netlify-cms) Astro integration to add Decap CMS to your project.
 
 - You can get started with the [Astro Blog Starter with Netlify CMS](https://github.com/delucis/astro-netlify-cms-starter).
 
@@ -20,7 +20,7 @@ i18nReady: false
 
 ## Production Sites
 
-The following sites use Astro + Netlify CMS in production:
+The following sites use Astro + Decap CMS in production:
 
 - [yunielacosta.com](https://www.yunielacosta.com/) by Yuniel Acosta — [source code on GitHub](https://github.com/yacosta738/yacosta738.github.io)
 
