--- a/src/content/docs/fr/contribute.mdx
+++ b/src/content/docs/fr/contribute.mdx
@@ -1,6 +1,6 @@
 ---
-title: Contribuer à la Doc
-description: Un guide pour contribuer à la Doc d'Astro
+title: Contribuer à la Documentation
+description: Un guide pour contribuer à la Documentation d'Astro
 i18nReady: true
 ---
 import Button from '~/components/Button.astro'
@@ -27,4 +27,16 @@ Nous avons plusieurs guides avec des informations sur la façon de commencer !
 - [Guide de Contribution Principal](https://github.com/withastro/docs/blob/main/CONTRIBUTING.md) - Veuillez d'abord consulter celui-ci !
 - [Guide d'Écriture](https://github.com/withastro/docs/blob/main/WRITING.md) - Conseils pour écrire dans le style de la documentation d'Astro
 - [Guide de Traduction](https://github.com/withastro/docs/blob/main/TRANSLATING.md) - Informations sur la façon d'aider à traduire la documentation d'Astro dans votre langue.
-- [Guide des Recettes](https://github.com/withastro/docs/blob/main/RECIPES.md) - Apprendre à propos de l'écriture et la contribution d'une recette.
+- [Guide des Recettes](https://github.com/withastro/docs/blob/main/RECIPES.md) - Apprendre sur l'écriture et la contribution à une recette.
+
+## Les guides de la communauté
+
+Ce sont des guides pour les rôles au sein de la communauté Astro.
+- [Guide du Mainteneur](https://github.com/withastro/docs/blob/main/MAINTAINERS.md) - Comment maintenir ce dépôt en tant que mainteneur Astro.
+- [Guide de l'Équipe de Soutien](https://github.com/withastro/docs/blob/main/SUPPORTSQUAD.md) - Comment aider l'Équipe Documentation dans le cadre de votre rôle d'Assistance.
+
+## Nos contributeurs
+
+Ces documents vous sont présentés par toutes ces personnes. [Rejoignez-nous sur GitHub !](https://github.com/withastro/docs)
+
+<ContributorList githubRepo="withastro/docs" />
