i18n(ko): fix awkward things

--- a/src/content/docs/ko/concepts/islands.mdx
+++ b/src/content/docs/ko/concepts/islands.mdx
@@ -1,6 +1,6 @@
 ---
 title: Astro Islands
-description: "Astro Islands (Component Islands)는 Astro에서 개발한 웹 아키텍처 패턴입니다. Islands architecture는 Etsy의 프론트엔드 아키텍트인 Katie Sylor-Miller가 2019년에 처음 만들었으며, Preact의 창시자인 Jason Miller이 발전시켰왔습니다."
+description: "Astro Islands (Component Islands)는 Astro에서 개발한 웹 아키텍처 패턴입니다. Islands architecture는 Etsy의 프론트엔드 엔지니어인 Katie Sylor-Miller가 2019년에 처음 만들었으며, Preact의 창시자인 Jason Miller이 발전시켰왔습니다."
 i18nReady: true
 ---
 
