--- a/src/content/docs/pt-br/reference/configuration-reference.mdx
+++ b/src/content/docs/pt-br/reference/configuration-reference.mdx
@@ -307,6 +307,30 @@ Especifica o diretório na saída da build onde assets gerados pelo Astro (JS e 
 **Veja Também:**
 - outDir
 
+### build.assetsPrefix
+
+<p>
+
+**Tipo:** `string`<br />
+**Padrão:** `undefined`<br />
+<Since v="2.2.0" />
+</p>
+
+Especifica o prefixo para links de assets gerados pelo Astro. Isto pode ser utilizado se assets são servidos de um domínio diferente do site atual.
+
+Por exemplo, se ele é definido como `https://cdn.exemplo.com`, assets serão buscados de `https://cdn.exemplo.com/_astro/...` (independente da opção `base`).
+Você precisaria fazer upload desses arquivos em `./dist/_astro/` para `https://cdn.exemplo.com/_astro/` para providenciar os assets.
+O processo varia dependendo em como o domínio de terceiros é hospeado.
+Para renomear o caminho `_astro`, especifique um novo diretório em `build.assets`.
+
+```js
+{
+  build: {
+    assetsPrefix: 'https://cdn.exemplo.com'
+  }
+}
+```
+
 ### build.serverEntry
 
 <p>
@@ -392,6 +416,31 @@ Se a porta indicada já estiver em uso, Astro irá automaticamente tentar a pró
 </p>
 
 Define headers de resposta HTTP customizados a serem enviados em `astro dev` e `astro preview`.
+
+## Opções de Imagem
+
+### image.service (Experimental)
+
+<p>
+
+**Tipo:** `'astro/assets/services/sharp' | 'astro/assets/services/squoosh' | string`<br />
+**Padrão:** `'astro/assets/services/squoosh'`<br />
+<Since v="2.1.0" />
+</p>
+
+Defina que serviço de imagem será usado para o suporte experimental de assets do Astro.
+
+O valor deve ser um especificador de módulo para o serviço de imagem a ser utilizado:
+seja um dos serviços integrados do Astro ou uma implementação de terceiros.
+
+```js
+{
+  image: {
+    // Exemplo: Habilite o serviço de imagem baseado no Sharp
+    service: 'astro/assets/services/sharp',
+  },
+}
+```
 
 ## Opções de Markdown
 
@@ -604,3 +653,28 @@ Veja a documentação completa do objeto de configuração `vite` em [vitejs.dev
 ## Flags Legado
 
 Para ajudar usuários a migrarem entre versões do Astro, nós ocasionalmente introduzimos flags `legacy`. Estas flags te permitem optar por um descontinuado ou antigo comportamento do Astro na versão mais recente, para que então você possa continuar atualizando e se aproveitando de novas versões do Astro.
+
+## Flags Experimentais
+
+Astro oferece flags experimentais para dar aos usuários acesso antecipado a novas funcionalidades.
+Não há garantia que essas flags são estáveis.
+
+### experimental.assets
+
+<p>
+
+**Tipo:** `boolean`<br />
+**Padrão:** `false`<br />
+<Since v="2.1.0" />
+</p>
+
+Habilite suporte experimental para otimizar e redimensionar imagens. Com isso habilitado, um novo módulo `astro:assets` será exposto.
+
+Para habilitar esta funcionalidade, defina `experimental.assets` como `true` na sua configuração do Astro:
+
+```js
+{
+	experimental: {
+		assets: true,
+	},
+}
