fix: translated missing part

--- a/src/content/docs/es/guides/integrations-guide/react.mdx
+++ b/src/content/docs/es/guides/integrations-guide/react.mdx
@@ -38,7 +38,7 @@ pnpm astro add react
 
 Si tienes algún problema, [no dudes en informárnoslo en GitHub](https://github.com/withastro/astro/issues) y prueba los pasos de instalación manual a continuación.
 
-### Install dependencies manually
+### Instalar dependencias manualmente
 
 Primero, instala la integración `@astrojs/react` de la siguiente manera:
 
