--- a/src/content/docs/es/guides/integrations-guide/vue.mdx
+++ b/src/content/docs/es/guides/integrations-guide/vue.mdx
@@ -17,12 +17,12 @@ Esta **[integración de Astro][astro-integration]** permite el renderizado del l
 
 Hay dos maneras de agregar integraciones a tu proyecto. ¡Probemos la opción más conveniente primero!
 
-### `astro add` command
+### Comando `astro add` 
 
 Astro inlcuye una herramienta CLI para agregar integraciones de primera parte: `astro add`. Este comando:
 
-1.  (Opcinalmente) Instalará todas las dependencias y dependencias de pares necesarias
-2.  (También opcionalmente) Actualizar tu archivo `astro.config.*` para aplicar esta integración
+1.  (Opcinalmente) Instala todas las dependencias y dependencias de pares necesarias
+2.  (También opcionalmente) Actualiza tu archivo `astro.config.*` para aplicar esta integración
 
 Para instalar `@astrojs/vue`, ejecuta lo siguiente desde el directorio de proyecto y sigue las instrucciones:
 
@@ -67,7 +67,7 @@ export default defineConfig({
 
 ## Empezando
 
-Para usar tu primer componente React en Astro, dirígete a nuestra [documentación de framework UI][astro-ui-frameworks]. Explorarás:
+Para usar tu primer componente Vue en Astro, dirígete a nuestra [documentación de framework UI][astro-ui-frameworks]. Explorarás:
 
 *   📦 como se cargan los componentes de framework,
 *   💧 opciones de hidratación del lado del cliente, y
@@ -102,7 +102,7 @@ export default defineConfig({
   integrations: [vue({
     template: {
       compilerOptions: {
-        // treat any tag that starts with ion- as custom elements
+        // trata cualquier etiqueta que comience con ion- como elementos personalizados
         isCustomElement: tag => tag.startsWith('ion-')
       }
     }
