--- a/src/content/docs/ja/install/manual.mdx
+++ b/src/content/docs/ja/install/manual.mdx
@@ -166,7 +166,7 @@ TypeScriptのコードを書く予定がある場合は、Astroの`strict`また
 /// <reference types="astro/client" />
 ```
 
-📚 詳しくはAstroのTypeScriptセットアップガイドをお読みください。
+📚 詳しくはAstroの[TypeScriptセットアップガイド](/ja/guides/typescript/#準備)をお読みください。
 
 ## 7. 次のステップ
 
