fix: fixed typo

--- a/src/content/docs/es/guides/integrations-guide/tailwind.mdx
+++ b/src/content/docs/es/guides/integrations-guide/tailwind.mdx
@@ -133,7 +133,7 @@ export default defineConfig({
 });
 ```
 
-Ahora puedes [importar tu propio `base.css` como una hoja de estilo local](/guides/styling/#importando-una-hoja-de-estilo-local).
+Ahora puedes [importar tu propio `base.css` como una hoja de estilo local](/es/guides/styling/#importando-una-hoja-de-estilo-local).
 
 ## Ejemplos
 
