--- a/src/content/docs/fr/contribute.mdx
+++ b/src/content/docs/fr/contribute.mdx
@@ -14,11 +14,11 @@ Nous accueillons les contributions de toute taille et les contributeurs de tout 
 
 Il y a de nombreuses façons de contribuer au site de la documentation d'Astro !
 
-Le site de la documentation d'Astro est ... un site Astro ! Le maintenir ne requiert pas seulement d'écrire du contenu mais aussi de maintenir du code Astro et de répondre à tous les problèmes de CSS, UI et UX. Nous rendons également notre documentation disponible dans plusieurs langues, nous avons donc besoin de votre aide pour traduire le site entièrement. 
+Le site de la documentation d'Astro est ... un site Astro ! Le maintenir ne requiert pas seulement d'écrire du contenu mais aussi de maintenir du code Astro et de répondre à tous les problèmes d'accessibilité, CSS, UI et UX. Nous rendons également notre documentation disponible dans plusieurs langues, nous avons donc besoin de votre aide pour traduire le site entièrement. 
 
 Vous pouvez également apporter une énorme contribution en vous impliquant en laissant des commentaires de review sur les PRs, en ajoutant des idées dans les Issues et Discussions GitHub existantes et en participant à nos tâches de maintenance des problèmes "épinglés" !
 
-Chaque PR, en particulier les PR de traduction, a besoin de réviseurs ! Réviser les PRs et laisser des commentaires, des suggestions ou un "LGTM!" ("Looks Good To Me!"/"Tout est bon pour moi !") est un excellent moyen de démarrer sur l'équipe documentation et d'en savoir plus sur Astro.
+Chaque PR, en particulier les PRs de traduction, a besoin de réviseurs ! Réviser les PRs et laisser des commentaires, des suggestions ou un "LGTM!" ("Looks Good To Me!"/"Tout est bon pour moi !") est un excellent moyen de démarrer dans l'équipe documentation et d'en savoir plus sur Astro.
 
 ## Les guides du contributeur
 
