--- a/src/content/docs/es/guides/integrations-guide/vercel.mdx
+++ b/src/content/docs/es/guides/integrations-guide/vercel.mdx
@@ -14,7 +14,7 @@ Este adaptador permite que Astro despliegue tu sitio SSR en [Vercel](https://www
 
 Aprende como desplegar tu sitio Astro en nuestro [guía de despliegue en Vercel](/es/guides/deploy/vercel/).
 
-## Por qué Astro Vercel
+## ¿Por qué Astro Vercel?
 
 Si estás usando Astro como un generador de sitios estáticos — su comportamiento es fuera de serie — no necesitas un adaptador.
 
@@ -68,7 +68,7 @@ Puedes desplegar en diferentes objetivos:
 Desplegar en el Edge tiene [sus limitaciones](https://vercel.com/docs/concepts/functions/edge-functions#known-limitations). Una función de borde no puede tener más de 1 MB de tamaño y no admiten API nativas de Node.js, entre otras.
 :::
 
-You can change where to target by changing the import:
+Puedes cambiar a donde apuntar cambiando la importación:
 
 
 ```js
@@ -88,9 +88,9 @@ astro build
 vercel deploy --prebuilt
 ```
 
-## configuración
+## Configuración
 
-Para configurar este adaptador, pasa un objecto a la invocación de función `vercel()` en `astro.config.mjs`:
+Para configurar este adaptador, pasa un objeto a la invocación de función `vercel()` en `astro.config.mjs`:
 
 ### analytics
 
